# litepcie

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  VALIDATION_REPORT.md  analyze_naming.py  pyproject.toml  run_checklist_review.py  setup.py  validate_docs.py
.github/workflows/: test.yml
ascii-box-fixer/: .pre-commit-config.yaml  README.md  fix_ascii_boxes.py  pyproject.toml  test_fix_ascii_boxes.py
ascii-box-fixer/.github/workflows/: test.yml
ascii-box-fixer/examples/: README.md  multiple_boxes_after.md  multiple_boxes_before.md  nested_boxes_after.md  nested_boxes_before.md  simple_box_after.md  simple_box_before.md
bench/: acorn.py  fk33.py  kc705.py  kcu105.py  test_ltssm_tracer.py  xcu1525.py
docs/: README.md  code-quality.md  hardware-debugging.md  implementation-status.md  integration-strategy.md  phase-4-completion-summary.md  phase-5-completion-summary.md  phase-6-completion-summary.md  phase-7-completion-summary.md  phase-9-8b10b-investigation.md  phase-9-dependencies.md  phase-9-testing-strategy.md  pipe-architecture.md  pipe-integration-examples.md  pipe-interface-guide.md  pipe-interface-spec.md  pipe-performance.md  pipe-testing-guide.md  session-2025-10-17-phase5-completion.md
docs/architecture/: REVIEW_CHECKLIST.md  REVIEW_RESULTS.md  VALIDATION_STATUS.md  clock-domain-architecture.md  complete-system-architecture.md  dll-layer.md  integration-patterns.md  integration-strategy.md  pipe-architecture.md  pipe-layer.md  quick-reference.md  serdes-layer.md  tlp-layer.md
docs/archive/: 2025-10-16-architectural-review.md  2025-10-16-pipe-dll-implementation-revised.md  2025-10-16-pipe-dll-implementation.md  2025-10-17-phase-4-cleanup-and-documentation.md  2025-10-17-phase-4-pipe-tx-rx-datapath.md  2025-10-17-phase-6-ltssm-link-training.md  2025-10-17-phase-9-internal-transceiver-support.md
docs/development/: implementation-status.md
docs/guides/: hardware-debugging.md  pipe-integration-examples.md  pipe-interface-guide.md  pipe-testing-guide.md
docs/phases/: phase-4-completion-summary.md  phase-6-completion-summary.md  phase-7-completion-summary.md  phase-9-8b10b-validation.md  phase-9-completion-summary.md  phase-9-dependencies.md  session-2025-10-17-phase5-completion.md
docs/reference/: pipe-interface-spec.md  (+1 more)
examples/: pcie_pipe_debug.py
litepcie/: common.py  gen.py
test/: README.md  common.py  requirements.txt  test_dma.py  test_examples.py  test_wishbone.py
(+112 files in other folders)
